<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sim_title"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/titrant"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/analyte"
                android:textSize="20sp" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/sa_wb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onModeClicked"
                android:text="@string/strongacid_weakbase" />

            <RadioButton
                android:id="@+id/sb_wa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onModeClicked"
                android:text="@string/strongbase_weakacid" />

            <RadioButton
                android:id="@+id/sa_sb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onModeClicked"
                android:text="@string/strongacid_strongbase" />

            <RadioButton
                android:id="@+id/sb_sa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onModeClicked"
                android:text="@string/strongbase_strongacid" />
        </RadioGroup>
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/pickTitrant"
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/pick_titrant"
                android:textSize="12sp" />
        <Spinner
            android:id="@+id/titrant_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/pick_titrant" />
</LinearLayout>
        <Spinner
            android:id="@+id/analyte_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/pick_analyte" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/molarityAnalyte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/analyte_molarity"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/displayMolarityAnalyte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/initial_molarity"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/molarityUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/mol_unit"
                android:textSize="20sp" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/analyteMolaritySeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="nextActivity"
            android:text="@string/start_button" />
    </LinearLayout>

</ScrollView>